gcc/testsuite/g++.old-deja/g++.ns/using11.C
// { dg-do assemble  }

class joey {
public:
  typedef int SVec;
};

using joey::SVec; // { dg-error "" } joey is not a namespace

